# my-config-files

./: .gitignore  LICENSE  README.md  activation.sh  pixi  pixi.toml
cpp_project/: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.txt  justfile  pixi.toml  run.sh
cpp_project/src/: CMakeLists.txt  main.cc  main_lib.cc  main_lib.h
cpp_project/src/optimizer/: CMakeLists.txt  nelder_mead.cc  nelder_mead.h  nelder_mead_test.cc
cpp_project/src/testing/: CMakeLists.txt  utils.cc  utils.h
cpp_project/src/utils/: CMakeLists.txt  logging.cpp  logging.h  math.cc  math.h  math_test.cc  tqdm.h
dot-files/: .tmux.conf  .zshrc
rust_project/: pixi.toml
rust_project/.cargo/: config.toml
rust_project/.github/: copilot-instructions.md
rust_project/hello_world/: Cargo.toml
rust_project/hello_world/src/: main.rs
shell-scripts/: rfv
vscode-settings/: keybindings.json
